# how_do_we_make_sure_skills_sel_20260715_033947_a0801865

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  arxiv_search.py  id_lookup.py  literature_review.md  notes_compact.json  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: discriminator.tex  exp1_main.tex  exp2.tex  exp3.tex  substrate.tex
papers/: README.md
results/: discriminator.csv  exp1_results.json  exp1_selfgen_skills.json  exp1_summary.csv  exp2_results.json  exp3_results.json
src/: analyze.py  exp1_discriminator.py  exp2_self_evolution.py  exp3_internalization.py  llm_client.py  tasks.py
