[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "openai>=2.45.0",
    "pandas>=2.3.3",
    "peft>=0.19.1",
    "scipy>=1.15.3",
    "torch>=2.13.0",
    "transformers==4.56.2",
]
